# android_ffmepg2

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/xhc/android_ffmepg2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioPlayer.cpp  CMakeLists.txt  CPP_shareptr.cpp  CPP_shareptr.h  CallJava.cpp  MyThread.cpp  ReadAvPacket.cpp  ReadAvPacket.h  native-lib.cpp
app/src/main/cpp/ffmpeg/ffmpeg_src/: CMakeLists.txt  build_easy.sh  config.h  configure  macos_source.txt  macos_source2.txt  test.c  xhc_source.txt  xhc_source2.txt
app/src/main/cpp/ffmpeg/ffmpeg_src/doc/: config.texi
app/src/main/cpp/ffmpeg/ffmpeg_src/ffbuild/: config.fate  config.mak  config.sh
app/src/main/cpp/ffmpeg/ffmpeg_src/ffmpeg_build/: Makefile  build_ff.sh  build_ffmpeg.sh  config.asm  config.h  src
app/src/main/cpp/ffmpeg/ffmpeg_src/ffmpeg_build/doc/: config.texi
app/src/main/cpp/ffmpeg/ffmpeg_src/ffmpeg_build/doc/examples/pc-uninstalled/: libavcodec-uninstalled.pc  libavdevice-uninstalled.pc  libavfilter-uninstalled.pc  libavformat-uninstalled.pc  libavutil-uninstalled.pc  libswresample-uninstalled.pc  libswscale-uninstalled.pc
app/src/main/cpp/ffmpeg/ffmpeg_src/ffmpeg_build/ffbuild/: config.fate  config.mak  config.sh
app/src/main/cpp/ffmpeg/ffmpeg_src/ffmpeg_build/libavcodec/: codec_list.c
app/src/main/cpp/ffmpeg/ffmpeg_src/ffmpeg_build/libavdevice/: outdev_list.c
app/src/main/cpp/ffmpeg/ffmpeg_src/libavcodec/: aacps.c  avcodec.h  cabac_functions.h  cbs_h2645.c  faanidct.c  golomb.h  h2645_parse.c  h264_sei.c  iirfilter.c  lpc.c  pngdsp.c
app/src/main/cpp/ffmpeg/ffmpeg_src/libavcodec/x86/: h264_qpel.d  me_cmp_init.d  mpegvideo.d  mpegvideoenc.d
app/src/main/cpp/ffmpeg/ffmpeg_src/libavdevice/: alldevices.d  avdevice.d  fbdev_common.d  fbdev_enc.d  utils.d  v4l2-common.d  v4l2.d  v4l2enc.d
app/src/main/cpp/ffmpeg/ffmpeg_src/libavfilter/: af_surround.c  avfilter.h  colorspacedsp.c  framepool.c  lavfutils.d  transform.c  vf_find_rect.d  vf_signature.d
app/src/main/cpp/ffmpeg/ffmpeg_src/libavfilter/x86/: vf_interlace_init.d
app/src/main/cpp/ffmpeg/ffmpeg_src/libavformat/: a64.d  aacdec.d  adtsenc.d  aiffenc.d  allformats.d  amr.d  apetag.d  apngenc.d  asf.d  asfenc.d  assenc.d  ast.d  astenc.d  au.d  audiointerleave.d  avc.d  avienc.d  avio.d  aviobuf.c  aviobuf.d  bit.d  caf.d  cafenc.d  codec2.d  concat.d  crcenc.d  crypto.d  cutils.d  dash.d  dashenc.d  daudenc.d  demuxer_list.c  dump.d  dvenc.d  ffmetaenc.d  fifo.d  fifo_test.d  filmstripenc.d  fitsenc.d  flacenc.d  (+151 more)
app/src/main/cpp/ffmpeg/ffmpeg_src/libavutil/: frame.c  intmath.h  libavutil.pc  mem.c  slicethread.c
app/src/main/cpp/ffmpeg/ffmpeg_src/libpostproc/: libpostproc.pc  postprocess.c
app/src/main/cpp/ffmpeg/ffmpeg_src/libswresample/: resample.c
app/src/main/cpp/ffmpeg/ffmpeg_src/libswscale/: swscale.c  utils.c
app/src/main/java/com/example/xhc/android_ffmepg2/: BaseActivity.java  DensityUtils.java  FFmpegUtils.java  MainActivity.java  Mp4PlayerActivity.java  MyGLSurfaceViewParent.java  MyRender.java  MyVideoGpuShow.java  RtspPullStream.java
app/src/main/res/layout/: activity_mp4_player.xml  activity_rtsp_pull_stream.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/xhc/android_ffmepg2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
