cmake_minimum_required(VERSION 3.4.1)

message(WARNING "sub MY_INCLUDE_PATH  ${CMAKE_SOURCE_DIR}/ffmpeg/ffmpeg_src/")

include_directories(
        ${CMAKE_SOURCE_DIR}/ffmpeg/ffmpeg_src/
#        ${CMAKE_SOURCE_DIR}/ffmpeg/ffmpeg_src/include/
)

add_library( # Sets the name of the library.
             ffmpeg

             # Sets the library as a shared library.
             SHARED
        test.c
        libavdevice/alldevices.c
        libavdevice/avdevice.c
        libavdevice/fbdev_common.c
        libavdevice/fbdev_dec.c
        libavdevice/fbdev_enc.c
        libavdevice/lavfi.c
        libavdevice/timefilter.c
        libavdevice/utils.c
        libavdevice/v4l2-common.c
        libavdevice/v4l2.c
        libavdevice/v4l2enc.c
        libavfilter/aeval.c
        libavfilter/af_acontrast.c
        libavfilter/af_acopy.c
        libavfilter/af_acrusher.c
        libavfilter/af_adelay.c
        libavfilter/af_aecho.c
        libavfilter/af_aemphasis.c
        libavfilter/af_afade.c
        libavfilter/af_afftfilt.c
        libavfilter/af_aformat.c
        libavfilter/af_afir.c
        libavfilter/af_agate.c
        libavfilter/af_aiir.c
        libavfilter/af_alimiter.c
        libavfilter/af_amerge.c
        libavfilter/af_amix.c
        libavfilter/af_anequalizer.c
        libavfilter/af_anull.c
        libavfilter/af_apad.c
        libavfilter/af_aphaser.c
        libavfilter/af_apulsator.c
        libavfilter/af_aresample.c
        libavfilter/af_asetnsamples.c
        libavfilter/af_asetrate.c
        libavfilter/af_ashowinfo.c
        libavfilter/af_astats.c
        libavfilter/af_atempo.c
        libavfilter/af_biquads.c
        libavfilter/af_channelmap.c
        libavfilter/af_channelsplit.c
        libavfilter/af_chorus.c
        libavfilter/af_compand.c
        libavfilter/af_compensationdelay.c
        libavfilter/af_crossfeed.c
        libavfilter/af_crystalizer.c
        libavfilter/af_dcshift.c
        libavfilter/af_drmeter.c
        libavfilter/af_dynaudnorm.c
        libavfilter/af_earwax.c
        libavfilter/af_extrastereo.c
        libavfilter/af_firequalizer.c
        libavfilter/af_flanger.c
        libavfilter/af_haas.c
        libavfilter/af_hdcd.c
        libavfilter/af_headphone.c
        libavfilter/af_join.c
        libavfilter/af_loudnorm.c
        libavfilter/af_mcompand.c
        libavfilter/af_pan.c
        libavfilter/af_replaygain.c
        libavfilter/af_sidechaincompress.c
        libavfilter/af_silencedetect.c
        libavfilter/af_silenceremove.c
        libavfilter/af_stereotools.c
        libavfilter/af_stereowiden.c
        libavfilter/af_superequalizer.c
        libavfilter/af_surround.c
        libavfilter/af_tremolo.c
        libavfilter/af_vibrato.c
        libavfilter/af_volume.c
        libavfilter/af_volumedetect.c
        libavfilter/allfilters.c
        libavfilter/asink_anullsink.c
        libavfilter/asrc_anoisesrc.c
        libavfilter/asrc_anullsrc.c
        libavfilter/asrc_hilbert.c
        libavfilter/asrc_sine.c
        libavfilter/audio.c
        libavfilter/avf_abitscope.c
        libavfilter/avf_ahistogram.c
        libavfilter/avf_aphasemeter.c
        libavfilter/avf_avectorscope.c
        libavfilter/avf_concat.c
        libavfilter/avf_showcqt.c
        libavfilter/avf_showfreqs.c
        libavfilter/avf_showspectrum.c
        libavfilter/avf_showvolume.c
        libavfilter/avf_showwaves.c
        libavfilter/avfilter.c
        libavfilter/avfiltergraph.c
        libavfilter/bbox.c
        libavfilter/buffersink.c
        libavfilter/buffersrc.c
        libavfilter/colorspacedsp.c
        libavfilter/drawutils.c
        libavfilter/ebur128.c
        libavfilter/f_bench.c
        libavfilter/f_drawgraph.c
        libavfilter/f_ebur128.c
        libavfilter/f_interleave.c
        libavfilter/f_loop.c
        libavfilter/f_metadata.c
        libavfilter/f_perms.c
        libavfilter/f_realtime.c
        libavfilter/f_reverse.c
        libavfilter/f_select.c
        libavfilter/f_sendcmd.c
        libavfilter/f_sidedata.c
        libavfilter/f_streamselect.c
        libavfilter/fifo.c
        libavfilter/formats.c
        libavfilter/framepool.c
        libavfilter/framequeue.c
        libavfilter/framesync.c
        libavfilter/generate_wave_table.c
        libavfilter/graphdump.c
        libavfilter/graphparser.c
        libavfilter/lavfutils.c
        libavfilter/lswsutils.c
        libavfilter/motion_estimation.c
        libavfilter/pthread.c
        libavfilter/scale.c
        libavfilter/setpts.c
        libavfilter/settb.c
        libavfilter/split.c
        libavfilter/src_movie.c
        libavfilter/transform.c
        libavfilter/trim.c
        libavfilter/vaf_spectrumsynth.c
        libavfilter/vf_alphamerge.c
        libavfilter/vf_aspect.c
        libavfilter/vf_atadenoise.c
        libavfilter/vf_avgblur.c
        libavfilter/vf_bbox.c
        libavfilter/vf_bitplanenoise.c
        libavfilter/vf_blackdetect.c
        libavfilter/vf_blackframe.c
        libavfilter/vf_blend.c
        libavfilter/vf_boxblur.c
        libavfilter/vf_bwdif.c
        libavfilter/vf_chromakey.c
        libavfilter/vf_ciescope.c
        libavfilter/vf_codecview.c
        libavfilter/vf_colorbalance.c
        libavfilter/vf_colorchannelmixer.c
        libavfilter/vf_colorkey.c
        libavfilter/vf_colorlevels.c
        libavfilter/vf_colormatrix.c
        libavfilter/vf_colorspace.c
        libavfilter/vf_convolution.c
        libavfilter/vf_convolve.c
        libavfilter/vf_copy.c
        libavfilter/vf_cover_rect.c
        libavfilter/vf_crop.c
        libavfilter/vf_cropdetect.c
        libavfilter/vf_curves.c
        libavfilter/vf_datascope.c
        libavfilter/vf_dctdnoiz.c
        libavfilter/vf_deband.c
        libavfilter/vf_decimate.c
        libavfilter/vf_deflicker.c
        libavfilter/vf_dejudder.c
        libavfilter/vf_delogo.c
        libavfilter/vf_deshake.c
        libavfilter/vf_despill.c
        libavfilter/vf_detelecine.c
        libavfilter/vf_displace.c
        libavfilter/vf_drawbox.c
        libavfilter/vf_edgedetect.c
        libavfilter/vf_elbg.c
        libavfilter/vf_entropy.c
        libavfilter/vf_eq.c
        libavfilter/vf_extractplanes.c
        libavfilter/vf_fade.c
        libavfilter/vf_fftfilt.c
        libavfilter/vf_field.c
        libavfilter/vf_fieldhint.c
        libavfilter/vf_fieldmatch.c
        libavfilter/vf_fieldorder.c
        libavfilter/vf_fillborders.c
        libavfilter/vf_find_rect.c
        libavfilter/vf_floodfill.c
        libavfilter/vf_format.c
        libavfilter/vf_fps.c
        libavfilter/vf_framepack.c
        libavfilter/vf_framerate.c
        libavfilter/vf_framestep.c
        libavfilter/vf_fspp.c
        libavfilter/vf_gblur.c
        libavfilter/vf_geq.c
        libavfilter/vf_gradfun.c
        libavfilter/vf_hflip.c
        libavfilter/vf_histeq.c
        libavfilter/vf_histogram.c
        libavfilter/vf_hqdn3d.c
        libavfilter/vf_hqx.c
        libavfilter/vf_hue.c
        libavfilter/vf_hwdownload.c
        libavfilter/vf_hwmap.c
        libavfilter/vf_hwupload.c
        libavfilter/vf_hysteresis.c
        libavfilter/vf_idet.c
        libavfilter/vf_il.c
        libavfilter/vf_interlace.c
        libavfilter/vf_kerndeint.c
        libavfilter/vf_lenscorrection.c
        libavfilter/vf_limiter.c
        libavfilter/vf_lumakey.c
        libavfilter/vf_lut.c
        libavfilter/vf_lut2.c
        libavfilter/vf_lut3d.c
        libavfilter/vf_maskedclamp.c
        libavfilter/vf_maskedmerge.c
        libavfilter/vf_mcdeint.c
        libavfilter/vf_mergeplanes.c
        libavfilter/vf_mestimate.c
        libavfilter/vf_midequalizer.c
        libavfilter/vf_minterpolate.c
        libavfilter/vf_mix.c
        libavfilter/vf_mpdecimate.c
        libavfilter/vf_neighbor.c
        libavfilter/vf_nlmeans.c
        libavfilter/vf_nnedi.c
        libavfilter/vf_noise.c
        libavfilter/vf_normalize.c
        libavfilter/vf_null.c
        libavfilter/vf_overlay.c
        libavfilter/vf_owdenoise.c
        libavfilter/vf_pad.c
        libavfilter/vf_palettegen.c
        libavfilter/vf_paletteuse.c
        libavfilter/vf_perspective.c
        libavfilter/vf_phase.c
        libavfilter/vf_pixdesctest.c
        libavfilter/vf_pp.c
        libavfilter/vf_pp7.c
        libavfilter/vf_premultiply.c
        libavfilter/vf_pseudocolor.c
        libavfilter/vf_psnr.c
        libavfilter/vf_pullup.c
        libavfilter/vf_qp.c
        libavfilter/vf_random.c
        libavfilter/vf_readeia608.c
        libavfilter/vf_readvitc.c
        libavfilter/vf_remap.c
        libavfilter/vf_removegrain.c
        libavfilter/vf_removelogo.c
        libavfilter/vf_repeatfields.c
        libavfilter/vf_rotate.c
        libavfilter/vf_sab.c
        libavfilter/vf_scale.c
        libavfilter/vf_selectivecolor.c
        libavfilter/vf_separatefields.c
        libavfilter/vf_setfield.c
        libavfilter/vf_setparams.c
        libavfilter/vf_showinfo.c
        libavfilter/vf_showpalette.c
        libavfilter/vf_shuffleframes.c
        libavfilter/vf_shuffleplanes.c
        libavfilter/vf_signalstats.c
        libavfilter/vf_signature.c
        libavfilter/vf_smartblur.c
        libavfilter/vf_spp.c
        libavfilter/vf_ssim.c
        libavfilter/vf_stack.c
        libavfilter/vf_stereo3d.c
        libavfilter/vf_super2xsai.c
        libavfilter/vf_swaprect.c
        libavfilter/vf_swapuv.c
        libavfilter/vf_telecine.c
        libavfilter/vf_threshold.c
        libavfilter/vf_thumbnail.c
        libavfilter/vf_tile.c
        libavfilter/vf_tinterlace.c
        libavfilter/vf_tonemap.c
        libavfilter/vf_transpose.c
        libavfilter/vf_unsharp.c
        libavfilter/vf_uspp.c
        libavfilter/vf_vaguedenoiser.c
        libavfilter/vf_vectorscope.c
        libavfilter/vf_vflip.c
        libavfilter/vf_vfrdet.c
        libavfilter/vf_vignette.c
        libavfilter/vf_vmafmotion.c
        libavfilter/vf_w3fdif.c
        libavfilter/vf_waveform.c
        libavfilter/vf_weave.c
        libavfilter/vf_xbr.c
        libavfilter/vf_yadif.c
        libavfilter/vf_zoompan.c
        libavfilter/video.c
        libavfilter/vsink_nullsink.c
        libavfilter/vsrc_cellauto.c
        libavfilter/vsrc_life.c
        libavfilter/vsrc_mandelbrot.c
        libavfilter/vsrc_mptestsrc.c
        libavfilter/vsrc_testsrc.c
        libavformat/a64.c
        libavformat/aacdec.c
        libavformat/adtsenc.c
        libavformat/aiffenc.c
        libavformat/allformats.c
        libavformat/amr.c
        libavformat/apetag.c
        libavformat/apngenc.c
        libavformat/asf.c
        libavformat/asfenc.c
        libavformat/assenc.c
        libavformat/ast.c
        libavformat/astenc.c
        libavformat/async.c
        libavformat/au.c
        libavformat/audiointerleave.c
        libavformat/avc.c
        libavformat/avidec.c
        libavformat/avienc.c
        libavformat/avio.c
        libavformat/aviobuf.c
        libavformat/avlanguage.c
        libavformat/bit.c
        libavformat/cache.c
        libavformat/caf.c
        libavformat/cafenc.c
        libavformat/codec2.c
        libavformat/concat.c
        libavformat/crcenc.c
        libavformat/crypto.c
        libavformat/cutils.c
        libavformat/dash.c
        libavformat/dashenc.c
        libavformat/data_uri.c
        libavformat/daudenc.c
        libavformat/dump.c
        libavformat/dvenc.c
        libavformat/ffmetaenc.c
        libavformat/fifo.c
        libavformat/fifo_test.c
        libavformat/file.c
        libavformat/filmstripenc.c
        libavformat/fitsenc.c
        libavformat/flacenc.c
        libavformat/flacenc_header.c
        libavformat/flvenc.c
        libavformat/format.c
        libavformat/framecrcenc.c
        libavformat/framehash.c
        libavformat/ftp.c
        libavformat/gif.c
        libavformat/gopher.c
        libavformat/gxfenc.c
        libavformat/h264dec.c
        libavformat/hashenc.c
        libavformat/hdsenc.c
        libavformat/hevc.c
        libavformat/hls.c
        libavformat/hlsenc.c
        libavformat/hlsplaylist.c
        libavformat/hlsproto.c
        libavformat/http.c
        libavformat/httpauth.c
        libavformat/icecast.c
        libavformat/icoenc.c
        libavformat/id3v1.c
        libavformat/id3v2.c
        libavformat/id3v2enc.c
        libavformat/idroqenc.c
        libavformat/ilbc.c
        libavformat/img2.c
        libavformat/img2dec.c
        libavformat/img2enc.c
        libavformat/ircam.c
        libavformat/ircamenc.c
        libavformat/isom.c
        libavformat/ivfenc.c
        libavformat/jacosubenc.c
        libavformat/latmenc.c
        libavformat/lrc.c
        libavformat/lrcenc.c
        libavformat/matroska.c
        libavformat/matroskaenc.c
        libavformat/md5proto.c
        libavformat/metadata.c
        libavformat/microdvdenc.c
        libavformat/mkvtimestamp_v2.c
        libavformat/mmf.c
        libavformat/mms.c
        libavformat/mmsh.c
        libavformat/mmst.c
        libavformat/mov.c
        libavformat/mov_chan.c
        libavformat/mov_esds.c
        libavformat/movenc.c
        libavformat/movenccenc.c
        libavformat/movenchint.c
        libavformat/mp3enc.c
        libavformat/mpegenc.c
        libavformat/mpegts.c
        libavformat/mpegtsenc.c
        libavformat/mpegvideodec.c
        libavformat/mpjpeg.c
        libavformat/mux.c
        libavformat/mxf.c
        libavformat/mxfenc.c
        libavformat/network.c
        libavformat/nullenc.c
        libavformat/nut.c
        libavformat/nutenc.c
        libavformat/oggenc.c
        libavformat/oma.c
        libavformat/omaenc.c
        libavformat/options.c
        libavformat/os_support.c
        libavformat/pcmenc.c
        libavformat/prompeg.c
        libavformat/protocols.c
        libavformat/qtpalette.c
        libavformat/rawdec.c
        libavformat/rawenc.c
        libavformat/rawutils.c
        libavformat/replaygain.c
        libavformat/riff.c
        libavformat/riffdec.c
        libavformat/riffenc.c
        libavformat/rm.c
        libavformat/rmenc.c
        libavformat/rso.c
        libavformat/rsoenc.c
        libavformat/rtmpdigest.c
        libavformat/rtmphttp.c
        libavformat/rtmppkt.c
        libavformat/rtmpproto.c
        libavformat/rtp.c
        libavformat/rtpenc.c
        libavformat/rtpenc_aac.c
        libavformat/rtpenc_amr.c
        libavformat/rtpenc_chain.c
        libavformat/rtpenc_h261.c
        libavformat/rtpenc_h263.c
        libavformat/rtpenc_h263_rfc2190.c
        libavformat/rtpenc_h264_hevc.c
        libavformat/rtpenc_jpeg.c
        libavformat/rtpenc_latm.c
        libavformat/rtpenc_mpegts.c
        libavformat/rtpenc_mpv.c
        libavformat/rtpenc_vc2hq.c
        libavformat/rtpenc_vp8.c
        libavformat/rtpenc_vp9.c
        libavformat/rtpenc_xiph.c
        libavformat/rtpproto.c
        libavformat/rtsp.c
        libavformat/rtspenc.c
        libavformat/sapenc.c
        libavformat/sccenc.c
        libavformat/sdp.c
        libavformat/segafilmenc.c
        libavformat/segment.c
        libavformat/smjpeg.c
        libavformat/smjpegenc.c
        libavformat/smoothstreamingenc.c
        libavformat/soxenc.c
        libavformat/spdif.c
        libavformat/spdifenc.c
        libavformat/srtenc.c
        libavformat/srtp.c
        libavformat/srtpproto.c
        libavformat/subfile.c
        libavformat/subtitles.c
        libavformat/supenc.c
        libavformat/swf.c
        libavformat/swfenc.c
        libavformat/tcp.c
        libavformat/tee.c
        libavformat/tee_common.c
        libavformat/teeproto.c
        libavformat/ttaenc.c
        libavformat/udp.c
        libavformat/uncodedframecrcenc.c
        libavformat/unix.c
        libavformat/url.c
        libavformat/urldecode.c
        libavformat/utils.c
        libavformat/vc1testenc.c
        libavformat/voc.c
        libavformat/vocenc.c
        libavformat/vorbiscomment.c
        libavformat/vpcc.c
        libavformat/w64.c
        libavformat/wavenc.c
        libavformat/webm_chunk.c
        libavformat/webmdashenc.c
        libavformat/webpenc.c
        libavformat/webvttenc.c
        libavformat/wtv_common.c
        libavformat/wtvenc.c
        libavformat/wv.c
        libavformat/wvenc.c
        libavformat/yuv4mpegenc.c
        libavcodec/aac_ac3_parser.c
        libavcodec/aac_adtstoasc_bsf.c
        libavcodec/aac_parser.c
        libavcodec/aaccoder.c
        libavcodec/aacdec.c
        libavcodec/aacenc.c
        libavcodec/aacenc_is.c
        libavcodec/aacenc_ltp.c
        libavcodec/aacenc_pred.c
        libavcodec/aacenc_tns.c
        libavcodec/aacenctab.c
        libavcodec/aacps_float.c
        libavcodec/aacpsdsp_float.c
        libavcodec/aacpsy.c
        libavcodec/aacsbr.c
        libavcodec/aactab.c
        libavcodec/aandcttab.c
        libavcodec/ac3_parser.c
        libavcodec/ac3tab.c
        libavcodec/adts_header.c
        libavcodec/adts_parser.c
        libavcodec/allcodecs.c
        libavcodec/audio_frame_queue.c
        libavcodec/avdct.c
        libavcodec/avfft.c
        libavcodec/avpacket.c
        libavcodec/avpicture.c
        libavcodec/bitstream.c
        libavcodec/bitstream_filter.c
        libavcodec/bitstream_filters.c
        libavcodec/blockdsp.c
        libavcodec/bsf.c
        libavcodec/cabac.c
        libavcodec/cbrt_data.c
        libavcodec/cbs.c
        libavcodec/cbs_h2645.c
        libavcodec/cbs_mpeg2.c
        libavcodec/chomp_bsf.c
        libavcodec/codec2utils.c
        libavcodec/codec_desc.c
        libavcodec/d3d11va.c
        libavcodec/dca.c
        libavcodec/dca_core_bsf.c
        libavcodec/decode.c
        libavcodec/dirac.c
        libavcodec/dnxhddata.c
        libavcodec/dump_extradata_bsf.c
        libavcodec/dv_profile.c
        libavcodec/eac3_core_bsf.c
        libavcodec/elbg.c
        libavcodec/encode.c
        libavcodec/error_resilience.c
        libavcodec/exif.c
        libavcodec/extract_extradata_bsf.c
        libavcodec/faandct.c
        libavcodec/faanidct.c
        libavcodec/fdctdsp.c
        libavcodec/fft_fixed.c
        libavcodec/fft_fixed_32.c
        libavcodec/fft_float.c
        libavcodec/fft_init_table.c
        libavcodec/filter_units_bsf.c
        libavcodec/flvdec.c
        libavcodec/flvenc.c
        libavcodec/frame_thread_encoder.c
        libavcodec/golomb.c
        libavcodec/h263.c
        libavcodec/h263_parser.c
        libavcodec/h263data.c
        libavcodec/h263dec.c
        libavcodec/h263dsp.c
        libavcodec/h2645_parse.c
        libavcodec/h264_cabac.c
        libavcodec/h264_cavlc.c
        libavcodec/h264_direct.c
        libavcodec/h264_loopfilter.c
        libavcodec/h264_mb.c
        libavcodec/h264_metadata_bsf.c
        libavcodec/h264_mp4toannexb_bsf.c
        libavcodec/h264_parse.c
        libavcodec/h264_parser.c
        libavcodec/h264_picture.c
        libavcodec/h264_ps.c
        libavcodec/h264_redundant_pps_bsf.c
        libavcodec/h264_refs.c
        libavcodec/h264_sei.c
        libavcodec/h264_slice.c
        libavcodec/h264chroma.c
        libavcodec/h264data.c
        libavcodec/h264dec.c
        libavcodec/h264dsp.c
        libavcodec/h264idct.c
        libavcodec/h264pred.c
        libavcodec/h264qpel.c
        libavcodec/h265_metadata_bsf.c
        libavcodec/hap.c
        libavcodec/hapqa_extract_bsf.c
        libavcodec/hevc_mp4toannexb_bsf.c
        libavcodec/hpeldsp.c
        libavcodec/idctdsp.c
        libavcodec/iirfilter.c
        libavcodec/imgconvert.c
        libavcodec/imx_dump_header_bsf.c
        libavcodec/intelh263dec.c
        libavcodec/ituh263dec.c
        libavcodec/ituh263enc.c
        libavcodec/jfdctfst.c
        libavcodec/jfdctint.c
        libavcodec/jni.c
        libavcodec/jpegtables.c
        libavcodec/jrevdct.c
        libavcodec/kbdwin.c
        libavcodec/latm_parser.c
        libavcodec/lossless_videoencdsp.c
        libavcodec/lpc.c
        libavcodec/mathtables.c
        libavcodec/mdct15.c
        libavcodec/mdct_fixed.c
        libavcodec/mdct_fixed_32.c
        libavcodec/mdct_float.c
        libavcodec/me_cmp.c
        libavcodec/mediacodec.c
        libavcodec/mjpeg2jpeg_bsf.c
        libavcodec/mjpeg_parser.c
        libavcodec/mjpega_dump_header_bsf.c
        libavcodec/mjpegdec.c
        libavcodec/mjpegenc.c
        libavcodec/mjpegenc_common.c
        libavcodec/mjpegenc_huffman.c
        libavcodec/motion_est.c
        libavcodec/movsub_bsf.c
        libavcodec/mp3_header_decompress_bsf.c
        libavcodec/mpeg12data.c
        libavcodec/mpeg12framerate.c
        libavcodec/mpeg2_metadata_bsf.c
        libavcodec/mpeg4_unpack_bframes_bsf.c
        libavcodec/mpeg4audio.c
        libavcodec/mpeg4video.c
        libavcodec/mpeg4video_parser.c
        libavcodec/mpeg4videodec.c
        libavcodec/mpeg4videoenc.c
        libavcodec/mpeg_er.c
        libavcodec/mpegaudiodata.c
        libavcodec/mpegaudiodecheader.c
        libavcodec/mpegpicture.c
        libavcodec/mpegutils.c
        libavcodec/mpegvideo.c
        libavcodec/mpegvideo_enc.c
        libavcodec/mpegvideo_motion.c
        libavcodec/mpegvideodata.c
        libavcodec/mpegvideodsp.c
        libavcodec/mpegvideoencdsp.c
        libavcodec/noise_bsf.c
        libavcodec/null_bsf.c
        libavcodec/options.c
        libavcodec/parser.c
        libavcodec/pixblockdsp.c
        libavcodec/png.c
        libavcodec/pngdec.c
        libavcodec/pngdsp.c
        libavcodec/pngenc.c
        libavcodec/profiles.c
        libavcodec/psymodel.c
        libavcodec/pthread.c
        libavcodec/pthread_frame.c
        libavcodec/pthread_slice.c
        libavcodec/qpeldsp.c
        libavcodec/qsv_api.c
        libavcodec/ratecontrol.c
        libavcodec/raw.c
        libavcodec/rdft.c
        libavcodec/remove_extradata_bsf.c
        libavcodec/rl.c
        libavcodec/sbrdsp.c
        libavcodec/simple_idct.c
        libavcodec/sinewin.c
        libavcodec/sinewin_fixed.c
        libavcodec/startcode.c
        libavcodec/tiff_common.c
        libavcodec/trace_headers_bsf.c
        libavcodec/utils.c
        libavcodec/v4l2_buffers.c
        libavcodec/v4l2_context.c
        libavcodec/v4l2_fmt.c
        libavcodec/v4l2_m2m.c
        libavcodec/videodsp.c
        libavcodec/vorbis_parser.c
        libavcodec/vp9_raw_reorder_bsf.c
        libavcodec/vp9_superframe_bsf.c
        libavcodec/vp9_superframe_split_bsf.c
        libavcodec/xiph.c
        libavcodec/xvididct.c
        libpostproc/postprocess.c
        libswresample/audioconvert.c
        libswresample/dither.c
        libswresample/options.c
        libswresample/rematrix.c
        libswresample/resample.c
        libswresample/resample_dsp.c
        libswresample/swresample.c
        libswresample/swresample_frame.c
        libswscale/alphablend.c
        libswscale/gamma.c
        libswscale/hscale.c
        libswscale/hscale_fast_bilinear.c
        libswscale/input.c
        libswscale/options.c
        libswscale/output.c
        libswscale/rgb2rgb.c
        libswscale/slice.c
        libswscale/swscale.c
        libswscale/swscale_unscaled.c
        libswscale/utils.c
        libswscale/vscale.c
        libswscale/yuv2rgb.c
        libavutil/../compat/strtod.c
        libavutil/adler32.c
        libavutil/aes.c
        libavutil/aes_ctr.c
        libavutil/audio_fifo.c
        libavutil/avstring.c
        libavutil/base64.c
        libavutil/blowfish.c
        libavutil/bprint.c
        libavutil/buffer.c
        libavutil/camellia.c
        libavutil/cast5.c
        libavutil/channel_layout.c
        libavutil/color_utils.c
        libavutil/cpu.c
        libavutil/crc.c
        libavutil/des.c
        libavutil/dict.c
        libavutil/display.c
        libavutil/downmix_info.c
        libavutil/encryption_info.c
        libavutil/error.c
        libavutil/eval.c
        libavutil/fifo.c
        libavutil/file.c
        libavutil/file_open.c
        libavutil/fixed_dsp.c
        libavutil/float_dsp.c
        libavutil/frame.c
        libavutil/hash.c
        libavutil/hmac.c
        libavutil/hwcontext.c
        libavutil/imgutils.c
        libavutil/integer.c
        libavutil/intmath.c
        libavutil/lfg.c
        libavutil/lls.c
        libavutil/log.c
        libavutil/log2_tab.c
        libavutil/mastering_display_metadata.c
        libavutil/mathematics.c
        libavutil/md5.c
        libavutil/mem.c
        libavutil/murmur3.c
        libavutil/opt.c
        libavutil/parseutils.c
        libavutil/pixdesc.c
        libavutil/pixelutils.c
        libavutil/random_seed.c
        libavutil/rational.c
        libavutil/rc4.c
        libavutil/reverse.c
        libavutil/ripemd.c
        libavutil/samplefmt.c
        libavutil/sha.c
        libavutil/sha512.c
        libavutil/slicethread.c
        libavutil/spherical.c
        libavutil/stereo3d.c
        libavutil/tea.c
        libavutil/threadmessage.c
        libavutil/time.c
        libavutil/timecode.c
        libavutil/tree.c
        libavutil/twofish.c
        libavutil/utils.c
        libavutil/xga_font_data.c
        libavutil/xtea.c








        )

# Searches for a specified prebuilt library and stores the path as a
# variable. Because CMake includes system libraries in the search path by
# default, you only need to specify the name of the public NDK library
# you want to add. CMake verifies that the library exists before
# completing its build.

#enable_language(ASM)

# Specifies libraries CMake should link to your target library. You
# can link multiple libraries, such as libraries you define in this
# build script, prebuilt third-party libraries, or system libraries.
find_library( # Sets the name of the path variable.
        zlib-lib

        # Specifies the name of the NDK library that
        # you want CMake to locate.
        z )
target_link_libraries( # Specifies the target library.
                        ffmpeg
                        ${zlib-lib}
                       # Links the target library to the log library
                       # included in the NDK.
                   )